--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,9 +18,13 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
+      - name: Install Dependencies
+        run: |
+          sudo apt install libasound2-dev -y
+
       - name: Upgrade pip
         run: |
-          python -m pip install -U pip
+          python -m pip install -U pip PyInstaller
           python -m pip install -r requirements.txt
 
       - name: build
