--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Upgrade pip
         run: |
           python -m pip install -U pip PyInstaller
-          python -m pip install -r requirements.txt
+          python -m pip install '.[dev]'
 
       - name: build
         run: pyinstaller -F randomnipple/main.py -i img/icon.ico -n random-nipple-player --version-file file_version_info.txt
@@ -51,7 +51,7 @@ jobs:
       - name: Upgrade pip
         run: |
           python -m pip install -U pip PyInstaller
-          python -m pip install -r requirements.txt
+          python -m pip install '.[dev]'
 
       - name: build
         run: pyinstaller -F randomnipple/main.py -i img/icon.ico -n random-nipple-player
@@ -81,7 +81,7 @@ jobs:
       - name: Upgrade pip
         run: |
           python -m pip install -U pip PyInstaller
-          python -m pip install -r requirements.txt
+          python -m pip install '.[dev]'
 
       - name: build
         run: pyinstaller -F randomnipple/main.py -i img/icon.ico -n random-nipple-player
