--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ install_requires =
     simpleaudio
 
 [options.package_data]
-gppt = py.typed
+random-nipple-player = py.typed
 
 [options.extras_require]
 dev =
