--- a/setup.cfg
+++ b/setup.cfg
@@ -22,11 +22,11 @@ packages = find:
 include-package-data = True
 python_requires = >= 3.8
 install_requires =
-    PySimpleGUI
-    simpleaudio
+    PySimpleGUI>=4.57.0
+    simpleaudio>=1.0.4
 
 [options.package_data]
-random-nipple-player = py.typed
+randomnipple = py.typed
 
 [options.extras_require]
 dev =
@@ -38,7 +38,7 @@ dev =
 
 [options.entry_points]
 console_scripts =
-    rnp=randomnipple.main:main
+    rnp = randomnipple.main:main
 
 [isort]
 profile = black
