add: pre-commit

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,17 +1,19 @@
 [metadata]
-name = random-nipple-player
+name = random_nipple_player
 version = attr: randomnipple.__version__
 description = 音声作品「乳首オナ指示でカリカリタイム」(RJ323807)用のプレイヤー
 long_description = file: README.md
 long_description_content_type = text/markdown
-license = MIT
+url = https://github.com/eggplants/random-nipple-player
 author = eggplants
 author_email = w10776e8w@yahoo.co.jp
-url = https://github.com/eggplants/random-nipple-player
+license = MIT
+license_file = LICENSE
 classifiers =
     License :: OSI Approved :: MIT License
     Programming Language :: Python
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
@@ -19,14 +21,15 @@ classifiers =
 
 [options]
 packages = find:
-include-package-data = True
-python_requires = >= 3.8
 install_requires =
     PySimpleGUI>=4.57.0
     simpleaudio>=1.0.4
+python_requires = >=3.8
+include_package_data = True
 
-[options.package_data]
-randomnipple = py.typed
+[options.entry_points]
+console_scripts =
+    rnp = randomnipple.main:main
 
 [options.extras_require]
 dev =
@@ -34,11 +37,9 @@ dev =
     flake8
     mypy
     setuptools>=46.4.0
-    types-requests
 
-[options.entry_points]
-console_scripts =
-    rnp = randomnipple.main:main
+[options.package_data]
+randomnipple = py.typed
 
 [isort]
 profile = black
